// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps calls the right version of removePost 1`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: ID, $slug: String) {
        removePost(postId: $postId, slug: $slug) {
          success
        }
      }",
        "variables": Object {
          "postId": 1,
          "slug": undefined,
        },
      },
      "meta": Object {
        "optimistic": true,
        "postId": 1,
        "slug": undefined,
      },
      "type": "PostHeader/REMOVE_POST",
    },
  ],
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: ID, $slug: String) {
        removePost(postId: $postId, slug: $slug) {
          success
        }
      }",
        "variables": Object {
          "postId": 1,
          "slug": undefined,
        },
      },
      "meta": Object {
        "optimistic": true,
        "postId": 1,
        "slug": undefined,
      },
      "type": "PostHeader/REMOVE_POST",
    },
  ],
]
`;

exports[`mapDispatchToProps maps the action generators 1`] = `
Object {
  "deletePost": [Function],
  "editPost": [Function],
  "fulfillPost": [Function],
  "pinPost": [Function],
  "removePost": [Function],
}
`;

exports[`mapDispatchToProps maps the action generators 2`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: ID, $slug: String) {
        removePost(postId: $postId, slug: $slug) {
          success
        }
      }",
        "variables": Object {
          "postId": 10,
          "slug": "mycommunity",
        },
      },
      "meta": Object {
        "optimistic": true,
        "postId": 10,
        "slug": "mycommunity",
      },
      "type": "PostHeader/REMOVE_POST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "args": Array [
          "/c/mycommunity/p/10/edit",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: ID, $communityId: ID) {
        pinPost(postId: $postId, communityId: $communityId) {
          success
        }
      }",
        "variables": Object {
          "communityId": 3,
          "postId": 2,
        },
      },
      "meta": Object {
        "communityId": 3,
        "optimistic": true,
        "postId": 2,
      },
      "type": "PostHeader/PIN_POST",
    },
  ],
]
`;
